--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         header h1 {
             font-size: 3.2rem;
             font-weight: 800;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #ec4899 100%);
+            background: linear-gradient(135deg, #e0e04a, #eef362);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
@@ -226,7 +226,7 @@
         }
 
         .view-pass-btn {
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, #e0e04a, #eef362);
             color: white;
             border: none;
             padding: 12px 20px;
@@ -243,7 +243,7 @@
         }
 
         .view-pass-btn::before {
-            content: '👁️';
+            content: '🎟️';
             margin-right: 6px;
         }
 
@@ -377,7 +377,7 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, #e0e04a, #eef362);
             color: white;
             box-shadow:
                 6px 6px 12px rgba(0,0,0,0.2),
@@ -497,11 +497,12 @@
             }
 
             .search-card {
-                padding: 24px;
+                width: 100% !important;
+                padding: 5px;
             }
 
             #passPreview {
-                padding: 24px;
+                padding: 5px;
             }
 
             #passCard {
@@ -529,6 +530,7 @@
                 margin: 4px 0;
             }
         }
+        
     </style>
 </head>
 <body>
