--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         }
 
         .view-pass-btn {
-            background: linear-gradient(135deg, #e0e04a, #eef362);
+            background: linear-gradient(135deg, #4fe04a, #8df362);
             color: white;
             border: none;
             padding: 12px 20px;
@@ -377,7 +377,7 @@
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #e0e04a, #eef362);
+            background: linear-gradient(135deg, #4fe04a, #8df362);
             color: white;
             box-shadow:
                 6px 6px 12px rgba(0,0,0,0.2),
@@ -600,43 +600,55 @@
             }
         }
 
-        document.getElementById('searchInput').addEventListener('input', function(e) {
-            const query = e.target.value.trim().toLowerCase();
-            const resultsDiv = document.getElementById('resultsDiv');
+     document.getElementById('searchInput').addEventListener('input', function(e) {
+    const query = e.target.value.trim().toLowerCase();
+    const resultsDiv = document.getElementById('resultsDiv');
 
-            if (query.length < 2) {
-                resultsDiv.style.display = 'none';
-                return;
-            }
+    if (query.length < 2) {
+        resultsDiv.style.display = 'none';
+        return;
+    }
 
-            const matches = students.filter(s => 
-                s.Name.toLowerCase().includes(query) ||
-                s.ID.toLowerCase().includes(query) ||
-                s.Hash_Code.toLowerCase().includes(query)
-            );
+    // Split query into words
+    const queryWords = query.split(/\s+/).filter(word => word.length > 0);
 
-            if (matches.length === 0) {
-                resultsDiv.innerHTML = '<div class="no-results"><h3>No matches found</h3><p>Please check your name or ID</p></div>';
-                resultsDiv.style.display = 'block';
-                return;
-            }
+    const matches = students.filter(s => {
+        const nameWords = s.Name.toLowerCase().split(/\s+/);
+        const id = s.ID.toLowerCase();
+        const hash = s.Hash_Code.toLowerCase();
 
-            resultsDiv.innerHTML = matches.map(s => `
-                <div class="student-card">
-                    <div class="student-header">
-                        <div class="student-info">
-                            <h3>${s.Name}</h3>
-                            <p>ID: ${s.ID}</p>
-                            <p>Year: ${s.Year}</p>
-                            <div class="hash-highlight">${s.Hash_Code}</div>
-                        </div>
-                        <button class="view-pass-btn" onclick='showPass(${JSON.stringify(s)})'>View Pass</button>
-                    </div>
+        // Match if ALL query words are found in name (any order)
+        const nameMatches = queryWords.every(qWord => 
+            nameWords.some(nWord => nWord.includes(qWord))
+        );
+
+        // Also match if query matches ID or Hash
+        const otherMatches = id.includes(query) || hash.includes(query);
+
+        return nameMatches || otherMatches;
+    });
+
+    if (matches.length === 0) {
+        resultsDiv.innerHTML = '<div class="no-results"><h3>No matches found</h3><p>Please check your name or ID</p></div>';
+        resultsDiv.style.display = 'block';
+        return;
+    }
+
+    resultsDiv.innerHTML = matches.map(s => `
+        <div class="student-card">
+            <div class="student-header">
+                <div class="student-info">
+                    <h3>${s.Name}</h3>
+                    <p>ID: ${s.ID}</p>
+                    <p>Year: ${s.Year}</p>
+                    <div class="hash-highlight">${s.Hash_Code}</div>
                 </div>
-            `).join('');
-            resultsDiv.style.display = 'block';
-        });
-
+                <button class="view-pass-btn" onclick='showPass(${JSON.stringify(s)})'>View Pass</button>
+            </div>
+        </div>
+    `).join('');
+    resultsDiv.style.display = 'block';
+});
         function showPass(student) {
             selectedStudent = student;
             document.getElementById('resultsDiv').style.display = 'none';
